# polymarket-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  config.yaml  docker-compose.yml  pyproject.toml
.github/: REPO_SEO_SETUP.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: quickstart.md  strategies.md
examples/: momentum_strategy.py  polymarket-bot.service  prometheus.yml
src/polymarket_bot/: __init__.py  bot.py  cli.py  config.py  risk.py
src/polymarket_bot/exchange/: __init__.py  clob.py  data.py  gamma.py
src/polymarket_bot/strategies/: __init__.py  base.py  market_making.py  mean_reversion.py
src/polymarket_bot/utils/: __init__.py  logging.py
tests/: test_risk.py  test_strategies.py
