[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-bot"
version = "0.1.0"
description = "Automated trading bot for Polymarket prediction markets — Python, CLOB API, multi-strategy, risk-managed."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Polymarket Bot Contributors" }
]
keywords = [
    "polymarket",
    "polymarket-bot",
    "polymarket-api",
    "polymarket-trading-bot",
    "prediction-market",
    "prediction-market-bot",
    "trading-bot",
    "automated-trading",
    "algorithmic-trading",
    "clob",
    "py-clob-client",
    "polygon",
    "crypto-trading-bot",
    "market-making",
    "arbitrage",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "py-clob-client>=0.17.0",
    "web3>=6.15.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "structlog>=24.1.0",
    "prometheus-client>=0.20.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "black>=24.3.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pre-commit>=3.7.0",
]

[project.urls]
Homepage = "https://github.com/YOUR-USERNAME/polymarket-bot"
Documentation = "https://github.com/YOUR-USERNAME/polymarket-bot#readme"
Repository = "https://github.com/YOUR-USERNAME/polymarket-bot"
Issues = "https://github.com/YOUR-USERNAME/polymarket-bot/issues"
Changelog = "https://github.com/YOUR-USERNAME/polymarket-bot/blob/main/CHANGELOG.md"

[project.scripts]
polymarket-bot = "polymarket_bot.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers"
